--- a/2017029570_README.md
+++ b/2017029570_README.md
@@ -1,10 +1,10 @@
 # 팀 SNL
 
->S : 팀장. DB.
+>S : 팀장. DB. -> 심상용
 
->N : 캘린더.
+>N : 캘린더. -> 남혜빈
 
->L : 앨범. 서기.
+>L : 앨범. 서기. -> 
 
 >공통: 메신저, 계산, 디자인
 
